Performance change and Accessibility improvements

--- a/kanban/index.html
+++ b/kanban/index.html
@@ -1,9 +1,28 @@
-<html>
+<html lang="en-US">
     <head>
-        <script src="https://unpkg.com/vue@3"></script>
+        <title>Kanban App</title>
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width; initial-scale=0.5, maximum-scale=0.5, minimum-scale=0.5; " />
+        <meta property="og:url"           content="https://oureleven.com/kanban" />
+		<meta property="og:type"          content="website" />
+		<meta property="og:title"         content="Kanban app" />
+		<meta property="og:description"   content="Kanban app that doesn't use the cloud. Can work offline and 100% privacy." />
+		<meta name="description" content="Kanban app that doesn't use the cloud. Can work offline and 100% privacy."/> 
+		<meta name="keywords" content="kanban, sprint planning, scrum, planning, trello, list, progression, offline, privacy"/>
+
+        <link rel="icon" type="image/svg" sizes="32x32" href="assets/logo.svg">
+        <script src="js/vue.global.js"></script>
         <script src="js/task_handling.js"></script>
-        
-        <link href='https://fonts.googleapis.com/css?family=Open Sans' rel='stylesheet'> 
+        <style>
+            @font-face {
+                font-family: 'Open Sans';
+                font-style: normal;
+                font-weight: 400;
+                font-stretch: 100%;
+                src: url(https://fonts.gstatic.com/s/opensans/v28/memSYaGs126MiZpBA-UvWbX2vVnXBbObj2OVZyOOSr4dVJWUgsjZ0B4gaVQUwaEQbjA.woff) format('woff');
+                unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+                }
+        </style>
         <link href='css/dialog.css' rel='stylesheet'> 
         <link href='css/layout.css' rel='stylesheet'> 
         <link href='css/settings.css' rel='stylesheet'> 
@@ -13,17 +32,17 @@
         <div id="app">
             <!-- Masthead -->
             <header class="masthead">
-                <img src="assets/logo.svg" style="width:55px;height:40px;margin:5px;"/>
+                <img src="assets/logo.svg" style="width:55px;height:40px;margin:5px;" alt="Kanban logo"/>
                 <div style="font-size:13pt;color:white;">看板 / kanban / iciban</div>
                 <div class="user-settings">
-                    <button class="mast_button" onclick="showSettings();">
-                        <img src="assets/settings.svg"/>
+                    <button class="mast_button" onclick="showSettings();" aria-label="Settings" title="Settings">
+                        <img src="assets/settings.svg" alt="Settings"/>
                     </button>
-                    <button class="mast_button" onclick="showLoad();">
-                        <img src="assets/open.svg"/>
+                    <button class="mast_button" onclick="showLoad();" aria-label="Load data" title="Load data">
+                        <img src="assets/open.svg" alt="Load data"/>
                     </button>
-                    <button class="mast_button" onclick="downloadData();">
-                        <img src="assets/download.svg"/>
+                    <button class="mast_button" onclick="downloadData();" aria-label="Download" title="Download">
+                        <img src="assets/download.svg" alt="Download"/>
                     </button>
                 </div>
             </header>
@@ -36,14 +55,14 @@
                     @dragover.prevent @dragenter.prevent ondrop="onDrop(event)">
                     <!-- phase header -->
                     <h3 class="list-title">{{category.name}}<button v-if="category.name == 'New'" 
-                        onclick="taskDialog()" class="category_title">+</button>
+                        onclick="taskDialog()" class="category_title" aria-label="Add Task">+</button>
                     </h3>
             
                     <ul class="list-items" v-for="task in filterTasks(category.name)">
                         <li v-bind:data-id="task.id" draggable="true" ondragstart="startDrag(event);" style="position:relative;">
                             <div class="task_name">{{task.name}}</div>
                             <span class="task_priority" v-bind:class="task.priority">{{task.priority}}</span>
-                            <img src="assets/user.svg" class="user_icon"/>
+                            <img src="assets/user.svg" class="user_icon" alt="user"/>
                             <span class="assign_to" >{{task.assign}}</span>
                             <span v-if="task.due != ''" class="due_date"><b>due</b>: {{task.due}}</span>
                             <img v-bind:data-id="task.id" class="sidebutton" src="assets/edit.svg" 
@@ -80,8 +99,12 @@
                             <input type="date" id="duedate" class="dialog_due_date"/>Due date</td></tr>
                         </tr>
                         <tr><td>
-                            <button onclick="updateTask()" class="dialog_button" style="margin-left: 135;">Apply</button>
-                            <button onclick="resetDialog()" style="margin-left: 5;" class="dialog_button" >Cancel</button></td></tr>
+                            <button onclick="updateTask()" class="dialog_button" style="margin-left: 135;" 
+                                aria-label="Update Task" title="Update task">Apply
+                            </button>
+                            <button onclick="resetDialog()" style="margin-left: 5;" class="dialog_button" 
+                                aria-label="Cancel Changes" title="Cancel changes">Cancel
+                            </button></td></tr>
                         </table>
                     </div>
                 </div>
@@ -90,7 +113,7 @@
             <!-- load data fragment -->
             <div class="overlay" id="load">
                 <div class="load_root">
-                    <image src="assets/close.svg" class="close_load_button" onclick="hideLoad()"/>
+                    <image src="assets/close.svg" class="close_load_button" onclick="hideLoad()" alt="Close Panel"/>
                     <h1>Kanban data</h1>
                     <div class="settings_description">
                         You can reset your kanban board, you can modify your kanban data here. Or you can paste in a
@@ -100,13 +123,16 @@
                     <hr>
                     <textarea id="kanban_data" class="data_display"></textarea>
                     <div>
-                        <button class="command_button" style="margin-left:165px;width:100px;" onclick="resetKanbanData()">
+                        <button class="command_button" style="margin-left:165px;width:100px;" 
+                            onclick="resetKanbanData()" aria-label="New kanban" title="New kanban">
                             New
                         </button>
-                        <button class="command_button" style="margin-left:10px;width:100px;" onclick="updateKanbanData()">
+                        <button class="command_button" style="margin-left:10px;width:100px;" 
+                            onclick="updateKanbanData()" aria-label="Update kanban" title="Update kanban">
                             Update
                         </button>
-                        <button class="command_button" style="margin-left:10px;width:100px;" onclick="copyKanbanData()">
+                        <button class="command_button" style="margin-left:10px;width:100px;" 
+                            onclick="copyKanbanData()" aria-label="Copy kanban to clipboard" title="Copy kanban to clipboard">
                             Copy
                         </button>
                     </div>
@@ -116,7 +142,7 @@
             <!-- settings fragment -->
             <div class="overlay" id="settings">
                 <div class="settings_root">
-                    <image src="assets/close.svg" class="close_button" onclick="hideSettings()"/>
+                    <image src="assets/close.svg" class="close_button" onclick="hideSettings()" alt="Close Panel"/>
                     <h1>Settings</h1>
                     <div class="settings_description">
                         Settings are applied right after changes are made. When all the changes are made, 
@@ -124,7 +150,7 @@
                     </div>
                     <hr>
                     <h2>User list</h2>
-                    <div  class="settings_description">
+                    <div class="settings_description">
                         This is the list of users available when dealing with task. If you want to assign 
                         task to more users, add it here.
                     </div>
@@ -132,7 +158,8 @@
                         <option v-for="user in users" >{{user.name}}</option>
                     </select>
                     <div>
-                        <button class="command_button" style="width:200px;" onclick="removeUser();">
+                        <button class="command_button" style="width:200px;" onclick="removeUser();" 
+                            aria-label="Remove selected user" title="Remove selected user">
                             Remove selected user
                         </button>
                     </div>
@@ -140,10 +167,12 @@
                         <input id="newUserName" type="text" placeholder="enter new user here" class="settings_input"/>
                     </div>
                     <div>
-                        <button class="command_button" style="width:100px;" onclick="addUser(true)">
+                        <button class="command_button" style="width:100px;" onclick="addUser(true)" 
+                            aria-label="Add user before" title="Add user before">
                             Add before
                         </button>
-                        <button class="command_button" style="margin-left:0px;width:100px;" onclick="addUser(false)">
+                        <button class="command_button" style="margin-left:0px;width:100px;" onclick="addUser(false)" 
+                            aria-label="Add user after" title="Add user after">
                             Add after
                         </button>
                     </div>
@@ -160,7 +189,8 @@
                         </option>
                     </select>
                     <div>
-                        <button class="command_button"  style="width:200px;" onclick="removeCategory();">
+                        <button class="command_button"  style="width:200px;" onclick="removeCategory();" 
+                            aria-label="Remove phase" title="Remove phase">
                             Remove selected phase
                         </button>
                     </div>
@@ -168,10 +198,12 @@
                         <input id="newCategoryName" type="text" placeholder="enter new phase here" class="settings_input"/>
                     </div>
                     <div>
-                        <button class="command_button" style="width:100px;" onclick="addCategory(true)">
+                        <button class="command_button" style="width:100px;" onclick="addCategory(true)"
+                            aria-label="Add phase before" title="Add phase before">
                             Add before
                         </button>
-                        <button class="command_button" style="margin-left:0px;width:100px;" onclick="addCategory(false)">
+                        <button class="command_button" style="margin-left:0px;width:100px;" onclick="addCategory(false)" 
+                            aria-label="Add phase after" title="Add phase after">
                             Add after
                         </button>
                     </div>
