Add service worker cache support

--- a/kanban/index.html
+++ b/kanban/index.html
@@ -1,16 +1,19 @@
-<html lang="en-US">
+<!DOCTYPE html>
+<html lang="en" manifest="app.manifest">
     <head>
         <title>Kanban App</title>
         <meta charset="utf-8" />
-        <meta name="viewport" content="width=device-width; initial-scale=0.5, maximum-scale=0.5, minimum-scale=0.5; " />
+        <meta name="viewport" content="width=device-width; initial-scale=1, maximum-scale=1, minimum-scale=1; " />
+        <meta name="theme-color" content="#397850"/>
         <meta property="og:url"           content="https://oureleven.com/kanban" />
 		<meta property="og:type"          content="website" />
 		<meta property="og:title"         content="Kanban app" />
 		<meta property="og:description"   content="Kanban app that doesn't use the cloud. Can work offline and 100% privacy." />
 		<meta name="description" content="Kanban app that doesn't use the cloud. Can work offline and 100% privacy."/> 
 		<meta name="keywords" content="kanban, sprint planning, scrum, planning, trello, list, progression, offline, privacy"/>
-
         <link rel="icon" type="image/svg" sizes="32x32" href="assets/logo.svg">
+
+        <script src="js/jakecache.js"></script>
         <script src="js/vue.global.js"></script>
         <script src="js/task_handling.js"></script>
         <style>
