--- a/kanban/index.html
+++ b/kanban/index.html
@@ -12,8 +12,19 @@
 		<meta name="description" content="Kanban app that doesn't use the cloud. Can work offline and 100% privacy."/> 
 		<meta name="keywords" content="kanban, sprint planning, scrum, planning, trello, list, progression, offline, privacy"/>
         <link rel="icon" type="image/svg" sizes="32x32" href="assets/logo.svg">
-
-        <script src="js/jakecache.js"></script>
+        <script>
+            if ('serviceWorker' in navigator) {
+                window.addEventListener('load', async () => {
+                    try {
+                        const registration = await navigator.serviceWorker.register('js/service-worker.js');
+                        console.log(`Service worker Registered with scope: ${registration.scope}`);
+                    } catch (e) {
+                        console.log('Service worker registration failed');
+                        console.log(e);
+                    }
+                });
+            }
+        </script>
         <script src="js/vue.global.js"></script>
         <script src="js/task_handling.js"></script>
         <style>
