--- a/kanban/index.html
+++ b/kanban/index.html
@@ -16,7 +16,7 @@
             if ('serviceWorker' in navigator) {
                 window.addEventListener('load', async () => {
                     try {
-                        const registration = await navigator.serviceWorker.register('js/service-worker.js');
+                        const registration = await navigator.serviceWorker.register('service-worker.js');
                         console.log(`Service worker Registered with scope: ${registration.scope}`);
                     } catch (e) {
                         console.log('Service worker registration failed');
