--- a/kanban/index.html
+++ b/kanban/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" manifest="app.manifest">
     <head>
         <title>Kanban App</title>
         <meta charset="utf-8" />
