--- a/kanban/index.html
+++ b/kanban/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
-<html lang="en" manifest="app.manifest">
+<html lang="en">
     <head>
         <title>Kanban App</title>
+        <link rel="manifest" href="app.manifest">
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width; initial-scale=1, maximum-scale=1, minimum-scale=1; " />
         <meta name="theme-color" content="#397850"/>
