Change home page

--- a/kanban/index.html
+++ b/kanban/index.html
@@ -11,7 +11,7 @@
 		<meta property="og:title"         content="Kanban app" />
 		<meta property="og:description"   content="Kanban app that doesn't use the cloud. Can work offline and 100% privacy." />
 		<meta name="description" content="Kanban app that doesn't use the cloud. Can work offline and 100% privacy."/> 
-		<meta name="keywords" content="kanban, sprint planning, scrum, planning, trello, list, progression, offline, privacy"/>
+		<meta name="keywords" content="kanban, agile, sprint planning, scrum, planning, trello, list, progression, offline, privacy"/>
         <link rel="icon" type="image/svg" sizes="32x32" href="assets/logo.svg">
         <script>
             if ('serviceWorker' in navigator) {
@@ -48,7 +48,7 @@
             <!-- Masthead -->
             <header class="masthead">
                 <img src="assets/logo.svg" style="width:55px;height:40px;margin:5px;" alt="Kanban logo"/>
-                <div style="font-size:13pt;color:white;">看板 / kanban / iciban</div>
+                <div style="font-size:13pt;color:white;">看板 / kan-ban / org</div>
                 <div class="user-settings">
                     <button class="mast_button" onclick="showSettings();" aria-label="Settings" title="Settings">
                         <img src="assets/settings.svg" alt="Settings"/>
