--- a/article/index.html
+++ b/article/index.html
@@ -134,7 +134,7 @@
 								<b>Hindsight:</b> Move to Costco Pharmacy a lot earlier.
 							</p>
 							<p>
-								<b>7. Amazon subscription is a good deal.</b><br/>
+								<b>7. Amazon subscribe & save is a good deal.</b><br/>
 								Consider signing up for Amazon's subscription service for everyday items such as floss and toothpaste to save 15% when you subscribe to five items. The best thing is you can choose your own frequency for delivery.
 								<br/>
 								<b>Hindsight:</b> Slowly build your subscription list.
