--- a/article/index.html
+++ b/article/index.html
@@ -151,7 +151,7 @@
 							</p>
 							<p>
 								<b>8. Know your tax code well.</b><br/>
-								Maximizing the Benefits of Not Having W2 Income: Exploring Tax Advantages through Proper Planning. Take advantage of a 0% long-term capital gain tax on up to $89.5k (for joint filers) by including asset sales and dividends. Utilize strategies such as converting a 401k to a Roth IRA to further increase savings.
+								Maximizing the Benefits of Not Having W2 Income: Exploring Tax Advantages through Proper Planning. Take advantage of a 0% long-term capital gain tax on up to $89.5k (for joint filers) by including asset sales and dividends. Utilize strategies such as converting a 401k to a Roth IRA (backdoor roth conversion) to further increase savings.
 								<br/>
 								<b>Hindsight:</b> Plan your capital gain realization.
 							</p>
