--- a/article/index.html
+++ b/article/index.html
@@ -172,7 +172,7 @@
 							</p>
 							<p>
 								<b>10. Boring and simple is better for investments.</b><br/>
-								Investment experts emphasize the importance of diversification, yet many individuals make the mistake of relying on their 401k administrator for costly high-fee funds or placing too much emphasis on a limited portfolio of stocks or alternative investments such as cryptocurrency. A safer strategy is to invest in the overall market through low-cost funds such as VTI or VOO, which track the S&P and offer a low expense ratio (0.03%) while providing the benefit of dividend income.
+								Investment experts emphasize the importance of diversification, yet many individuals make the mistake of relying on their 401k administrator for costly high-fee funds or placing too much emphasis on a limited portfolio of stocks or alternative investments such as cryptocurrency. A safer strategy is to invest in the overall market through low-cost funds such as VTI or VOO, which track the S&P and offer a low expense ratio (0.03%) while providing the benefit of dividend income. Set those dividend income to auto-reinvest into the same funds for dollar cost average over time.
 								<br/>
 								<b>Hindsight:</b> Focus more on market wide funds with low expense and produce dividends.
 							</p>
