--- a/article/index.html
+++ b/article/index.html
@@ -152,13 +152,13 @@
 							<p>
 								<b>8. Know your tax code well.</b><br/>
 								Maximizing the Benefits of Not Having W2 Income: Exploring Tax Advantages through Proper Planning. 
-								
-									<ul>Take advantage of a 0% long-term capital gain tax on up to $89.5k (for joint filers) by including asset sales and dividends. </ul>
-									<ul>Utilize strategies such as converting a 401k to a Roth IRA (backdoor roth conversion) to further increase savings.</ul>
-									<ul>Even when you are retired, you can do side gig like apps, web sites, youtube or part-time consulting. You can contribute all those side income as SOLO 401k up to $61k so it is entirely pre-tax. </ul>
-									<ul>If you are investing municipal funds (those pay good amount) in retirement account like IRA/401k, ensure it is taxable municipal funds.</ul>
-									<ul>Rental property - when you factor in mortgage interest, repairs, depreciations & property management fees, you probably don't have much of rental income left but that means no tax either. The real win over time is that you will own more asset and can sell at appreciated value 15-20 years later. </ul>
-								
+								<ul>
+									<li>Take advantage of a 0% long-term capital gain tax on up to $89.5k (for joint filers) by including asset sales and dividends. </li>
+									<li>Utilize strategies such as converting a 401k to a Roth IRA (backdoor roth conversion) to further increase savings.</li>
+									<li>Even when you are retired, you can do side gig like apps, web sites, youtube or part-time consulting. First deduct business expenses, next contribute all those side income as SOLO 401k up to $61k ($121k if joint ownership with spouse) so it is entirely pre-tax. </li>
+									<li>If you are investing municipal funds (those pay good amount) in retirement account like IRA/401k, ensure it is taxable municipal funds.</li>
+									<li>Rental property - when you factor in mortgage interest, repairs, depreciations & property management fees, you probably don't have much of rental income left but that means no tax either. The real win over time is that you will own more asset and can sell at appreciated value 15-20 years later. </li>
+								</ul>
 								<br/>
 								<b>Hindsight:</b> Plan your capital gain realization carefully.
 							</p>
