--- a/article/index.html
+++ b/article/index.html
@@ -35,7 +35,7 @@
 								<p>personal finance</p>
 							</header>
 							<div class="info">
-								<span class="date"><span class="month">Jan<span>y</span></span> <span class="day">30</span><span class="year">, 2023</span></span>
+								<span class="date"><span class="month">Jan</span><span class="day">30</span><span class="year">, 2023</span></span>
 								<!--
 									Note: You can change the number of list items in "stats" to whatever you want.
 								-->
