--- a/article/index.html
+++ b/article/index.html
@@ -133,7 +133,7 @@
 							</p>
 							<p>
 								<b>5. Get groceries / snacks / gasoline from Costco.</b><br/>
-								Prior to retirement, we utilized Costco but not as frequently as we do now. Since retiring, we have made Costco our go-to for all our grocery needs, including fruits, vegetables, meat, dairy, drinks, snacks, and more. According to estimates, shopping at Costco can result in a savings of 30-40% compared to other grocery stores. Additionally, the gas at Costco is typically 10-15% cheaper than other stations, making it an effective way to combat inflation. Another strategy is to buy in bulk when the item is on discount.
+								Prior to retirement, we utilized Costco but not as frequently as we do now. Since retiring, we have made Costco our go-to for all our grocery needs, including fruits, vegetables, meat, dairy, drinks, snacks, and more. According to estimates, shopping at Costco can result in a savings of 30-40% compared to other grocery stores. Additionally, the gas at Costco is typically 20-25% cheaper than other gas stations, making it an effective way to combat inflation. Another strategy is to buy in bulk when the item is on discount.
 								<br/>
 								<b>Hindsight:</b> N/A
 							</p>
