--- a/article/index.html
+++ b/article/index.html
@@ -132,16 +132,17 @@
 								<b>Hindsight:</b> I could have cut Cable TV a lot sooner.
 							</p>
 							<p>
-								<b>5. Get groceries / snacks / gasoline from Costco.</b><br/>
+								<b>5. Get groceries / snacks / gasoline / prescriptions from Costco.</b><br/>
 								Prior to retirement, we utilized Costco but not as frequently as we do now. Since retiring, we have made Costco our go-to for all our grocery needs, including fruits, vegetables, meat, dairy, drinks, snacks, and more. According to estimates, shopping at Costco can result in a savings of 30-40% compared to other grocery stores. Additionally, the gas at Costco is typically 20-25% cheaper than other gas stations, making it an effective way to combat inflation. Another strategy is to buy in bulk when the item is on discount.
+								This works for prescription as well. Our medical insurance covers prescription medications with a $38 monthly co-pay. However, we've found that filling the same prescriptions at Costco Pharmacy without insurance costs only $10.5 per month. Although the savings may seem minimal in this case, they can be substantial for other medications.
 								<br/>
-								<b>Hindsight:</b> N/A
+								<b>Hindsight:</b> Get stuffs from Costco when possible.
 							</p>
 							<p>
-								<b>6. Prescription drug scam.</b><br/>
-								Our medical insurance covers prescription medications with a $38 monthly co-pay. However, we've found that filling the same prescriptions at Costco Pharmacy without insurance costs only $10.5 per month. Although the savings may seem minimal in this case, they can be substantial for other medications.
+								<b>6. Get Gift cards in Nov/Dec for the year.</b><br/>
+								During the last 2 months of the year, they will be campaigns to sell gift cards at a discount. Brands like Apple, Doordash, Alaska Air, Southwest etc will be running discounted campaigns. Savings can be 15-25%. We use Alaska Air and got gift cards at 15% discount. Another one is local grocery store, we secure 25% off. If you stack this with credit card cash back and Rakuten, it can be juicy.
 								<br/>
-								<b>Hindsight:</b> Move to Costco Pharmacy a lot earlier.
+								<b>Hindsight:</b> Plan your spending with discounted gift cards.
 							</p>
 							<p>
 								<b>7. Amazon subscribe & save is a good deal.</b><br/>
